# Solana-Docs

./: .gitignore
crud_app/: Anchor.toml
crud_app/programs/pda/src/: lib.rs
crud_app/tests/: anchor.ts
read_from_network/: deserialize_mint_acc.ts  fetch_mint_acc.ts  package-lock.json  package.json  token_program.ts  wallet_fetch.ts
spl-token/: Cargo.toml
write_to_network/: create_Token.ts  package.json  transfer_SOL.ts
