[package]
name = "create-token-account"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
dotenvy = "0.15.7"
solana-client = "3.0.8"
solana-commitment-config = "3.0.0"
solana-sdk = "3.0.0"
solana-system-interface = "2.0.0"
spl-associated-token-account-interface = "2.0.0"
spl-token-interface = "2.0.0"
tokio = "1.48.0"
